# pyo3-example

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
python/: test_my_project.py
src/: lib.rs
stubs/: my_project.pyi
